--- a/back/build.gradle
+++ b/back/build.gradle
@@ -25,8 +25,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    annotationProcessor group:'org.projectlombok',name:'lombok',version:'1.18.22'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
     runtimeOnly 'com.mysql:mysql-connector-j'
-    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
@@ -34,7 +36,7 @@ dependencies {
     // Swagger 2
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
 
 }
