--- a/front/.prettierrc.json
+++ b/front/.prettierrc.json
@@ -1,7 +1,8 @@
 {
-    "tabWidth": 2,
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "printWidth": 80
+  "arrowParens": "always",
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "printWidth": 80
 }
