--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -26,11 +26,16 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  devtools:
+    restart:
+      enabled: true
+      additional-exclude: static/**,public/**
+    # Live Reload
 logging:
   level:
     org:
       hibernate: info
-
+      type: trace
 
 
 
