--- a/front/package.json
+++ b/front/package.json
@@ -9,9 +9,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.36.3",
     "axios": "^1.2.6",
     "chart.js": "^4.2.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.7.1",
