[Feat] QueryDSL 환경셋팅, 메인페이지 등락률 Top5 종목 출력, 단일종목 상세 출력
QuseyDSl gradle 초기환경 셋팅, 메인페이지에 해당날짜 등락률이 높은 종목, 낮은 종목 출력, 단일 종목 페이지 이동 시 날짜범위에 따라 주식데이터 출력

Issue : S08P12B111-420, S08P12B111-421, S08P12B111-422, S08P12B111-423

--- a/back/build.gradle
+++ b/back/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.8'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'com.udteam'
@@ -21,6 +22,12 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.6.1'
+    implementation 'com.querydsl:querydsl-core:5.0.0'
+    implementation "com.querydsl:querydsl-jpa:5.0.0"
+    implementation "com.querydsl:querydsl-apt:5.0.0"
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0"
+
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
@@ -43,4 +50,19 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+def querydslDir = "$buildDir/generated/querydsl"
+querydsl {
+    jpa = true
+    querydslSourcesDir = querydslDir
+}
+sourceSets {
+    main.java.srcDir querydslDir
+}
+configurations {
+    querydsl.extendsFrom compileClasspath
+}
+compileQuerydsl {
+    options.annotationProcessorPath = configurations.querydsl
 }
