--- a/front/package.json
+++ b/front/package.json
@@ -7,15 +7,16 @@
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.6",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.36.3",
     "axios": "^1.2.6",
     "chart.js": "^4.2.0",
-    "react": "^17.0.2",
+    "framer-motion": "^8.5.5",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
