--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
     "styled-component": "^2.8.0",
