--- a/back/build.gradle
+++ b/back/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.3'
 }
 
