--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -1,8 +1,19 @@
+#default
+spring:
+  profiles:
+    group:
+      local: local,oauthlocal
+      blue: blue,oauthprod
+      green: green,oauthprod
+    active: local
+---
 server:
-  port: 80
-
+  port: 8080
 
 spring:
+  config:
+    activate:
+      on-profile: local
   datasource:
     url : jdbc:mysql://127.0.0.1:3306/miristockdb?characterEncoding=UTF-8&serverTimezone=UTC
     username: ssafy
@@ -20,22 +31,198 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
-    passwor: 'ssafy'
-  profiles:
-    include: oauth
+    password: 'miriSt@ckredis4365#'
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
-  devtools:
-    restart:
-      enabled: true
-      additional-exclude: static/**,public/**
-    # Live Reload
 logging:
   level:
     org:
       hibernate: info
-      type: trace
+---
+server:
+  port: 8081
 
+spring:
+  config:
+    activate:
+      on-profile: green
+  datasource:
+    url : jdbc:mysql://host.docker.internal:3306/miristockdb?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
+    username: miristock
+    password: miriSt@ckdb4615!
+    driver-class-name : com.mysql.cj.jdbc.Driver
+  jpa:
+    database : mysql
+    database-platform : org.hibernate.dialect.MySQL5InnoDBDialect
+    hibernate:
+    properties:
+      hibernate:
+        format_sql : true
+        show_sql : true
+        use_sql_comments: true
+  redis:
+    host: host.docker.internal
+    port: 6379
+    password: miriSt@ckredis4365#
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+logging:
+  level:
+    org:
+      hibernate: info
 
+---
+server:
+  port: 8082
 
+spring:
+  config:
+    activate:
+      on-profile: blue
+  datasource:
+    url : jdbc:mysql://host.docker.internal:3306/miristockdb?characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
+    username: miristock
+    password: miriSt@ckdb4615!
+    driver-class-name : com.mysql.cj.jdbc.Driver
+  jpa:
+    database : mysql
+    database-platform : org.hibernate.dialect.MySQL5InnoDBDialect
+    hibernate:
+    properties:
+      hibernate:
+        format_sql : true
+        show_sql : true
+        use_sql_comments: true
+  redis:
+    host: host.docker.internal
+    port: 6379
+    password: miriSt@ckredis4365#
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+logging:
+  level:
+    org:
+      hibernate: info
+
+---
+spring:
+  config:
+    activate:
+      on-profile: oauthlocal
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: 8c52e96f8bbd07c941c376c721e9f8cc
+            client-secret: iIwv22CMj8YYIGsjgaoVRj82HWEmm2AO
+            redirect-uri: http://localhost:80/login/oauth2/code/kakao
+            authorization-grant-type: authorization_code
+            client-authentication-method: POST
+            client-name: Kakao
+            scope:
+              - profile_nickname
+              - profile_image
+              - account_email
+          naver:
+            client-id : cfzdBqeXodwiA7Ow_KxP
+            client_secret : Qgln4dA2rD
+            redirect-uri: http://localhost:80/login/oauth2/code/naver
+            authorization-grant-type : authorization_code
+            scope :
+              - name
+              - email
+              - nickname
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          naver:
+            authorization-uri : https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+---
+spring:
+  config:
+    activate:
+      on-profile: oauthprod
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: 8c52e96f8bbd07c941c376c721e9f8cc
+            client-secret: iIwv22CMj8YYIGsjgaoVRj82HWEmm2AO
+            redirect-uri: https://i8b111.p.ssafy.io/login/oauth2/code/kakao
+            authorization-grant-type: authorization_code
+            client-authentication-method: POST
+            client-name: Kakao
+            scope:
+              - profile_nickname
+              - profile_image
+              - account_email
+          naver:
+            client-id : cfzdBqeXodwiA7Ow_KxP
+            client_secret : Qgln4dA2rD
+            redirect-uri: https://i8b111.p.ssfy.io/login/oauth2/code/naver
+            authorization-grant-type : authorization_code
+            scope :
+              - name
+              - email
+              - nickname
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+          naver:
+            authorization-uri : https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+#spring:
+#  config:
+#    activate:
+#      on-profile: oauth
+#  security:
+#    oauth2:
+#      client:
+#        registration:
+#          kakao:
+#            client-id: 8c52e96f8bbd07c941c376c721e9f8cc
+#            client-secret: iIwv22CMj8YYIGsjgaoVRj82HWEmm2AO
+#            redirect-uri: http://localhost:80/login/oauth2/code/kakao
+#            authorization-grant-type: authorization_code
+#            client-authentication-method: POST
+#            client-name: Kakao
+#            scope:
+#              - profile_nickname
+#              - profile_image
+#              - account_email
+#          naver:
+#            client-id: cfzdBqeXodwiA7Ow_KxP
+#            client_secret: Qgln4dA2rD
+#            redirect-uri: http://localhost:80/login/oauth2/code/naver
+#            authorization-grant-type: authorization_code
+#            scope:
+#              - name
+#              - email
+#              - nickname
+#        provider:
+#          kakao:
+#            authorization-uri: https://kauth.kakao.com/oauth/authorize
+#            token-uri: https://kauth.kakao.com/oauth/token
+#            user-info-uri: https://kapi.kakao.com/v2/user/me
+#            user-name-attribute: id
+#          naver:
+#            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+#            token-uri: https://nid.naver.com/oauth2.0/token
+#            user-info-uri: https://openapi.naver.com/v1/nid/me
+#            user-name-attribute: response
