--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.3.2",
     "styled-component": "^2.8.0",
+    "sweetalert2": "^11.7.1",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.2"
   },
